--- a/app/views/homes/_category.html.haml
+++ b/app/views/homes/_category.html.haml
@@ -1,4 +1,4 @@
-%section#services.content-section.text-center
+%section#services.content-section.text-center.mt-negative-50
   .container
     .content-section-heading
       %h3.text-secondary.mb-0 Category
