--- a/app/views/homes/_service.html.haml
+++ b/app/views/homes/_service.html.haml
@@ -10,22 +10,22 @@
             %i.fa.fa-bullhorn.fa-4x.icon{"aria-hidden" => "true"}
           %h4
             %strong レシピをシェア
-          %p.text-faded.text-left.mb-0 自分の低FODMAPレシピをみんなに写真やタグをつけて投稿できます。
+          %p.text-faded.mb-0 自分の低FODMAPレシピをみんなに写真やタグをつけて投稿できます。
         .col-md-6.mb-5.mb-lg-0
           %span.service-icon.rounded-circle.mx-auto.mb-3
             %i.fa.fa-comments-o.fa-4x.icon{"aria-hidden" => "true"}
           %h4
             %strong レシピにいいねやコメント
-          %p.text-faded.text-left.mb-0 レシピごとにいいねやコメントを残すことができ、いいねしたレシピはお気に入りに登録されます。
+          %p.text-faded.mb-0 レシピごとにいいねやコメントを残すことができ、いいねしたレシピはお気に入りに登録されます。
         .col-md-6.mb-5.mb-md-0
           %span.service-icon.rounded-circle.mx-auto.mb-3
             %i.fa.fa-users.fa-4x.icon{"aria-hidden" => "true"}
           %h4
             %strong お気に入りの投稿者をフォロー
-          %p.text-faded.text-left.mb-0 気に入った投稿者がいればフォローすることができ、その投稿者のレシピ一覧を見ることができます。
+          %p.text-faded.mb-0 気に入った投稿者がいればフォローすることができ、その投稿者のレシピ一覧を見ることができます。
         .col-md-6.mb-5.mb-md-0
           %span.service-icon.rounded-circle.mx-auto.mb-3
             %i.fa.fa-search.fa-4x.icon{"aria-hidden" => "true"}
           %h4
             %strong カテゴリー検索
-          %p.text-faded.text-left.mb-0 レシピは「ベジタリアン」「ビーガン」「グルテンフリー」「ラクトースフリー」のカテゴリーごとに検索可能です。
+          %p.text-faded.mb-0 レシピは「ベジタリアン」「ビーガン」「グルテンフリー」「ラクトースフリー」のカテゴリーごとに検索可能です。
