--- a/app/views/homes/_what-is-happy-gut.html.haml
+++ b/app/views/homes/_what-is-happy-gut.html.haml
@@ -2,7 +2,7 @@
   .container
     %h3.mb-30 Happy Gutとは
     .section-about
-      %img.gut-image{:alt => "gut-image", :src => "/assets/diarrhea.png"}/
+      %img.gut-image{:alt => "gut-image", :src => "https://happy-gut-fodmap.s3-ap-northeast-1.amazonaws.com/uploads/recipe/picture/diarrhea.png"}/
       %p 
         誰もが人生で一度はお腹の調子が悪くなったことがあると思います。例えば、ガス溜まりであったり、腹部の膨満感、便秘、下痢など。
         %br>/
