--- a/app/assets/stylesheets/_common.scss
+++ b/app/assets/stylesheets/_common.scss
@@ -41,6 +41,15 @@ label {
 .mb-15 {
   margin-bottom: 15px;
 }
+.mt-20 {
+  margin-top: 20px;
+}
+.pt-15 {
+  padding-top: 15px;
+}
+.mt-negative-50 {
+  margin-top: -50px;
+}
 .bg-white {
   background-color: white;
 }
@@ -53,40 +62,8 @@ label {
 .ml-20 {
   margin-left: 20px;
 }
+  
 
-
-
-.top-menu {
-  background-color: white;
-  height: 100px;
-  margin-bottom: 20px;
-    .navbar-nav {  
-      display: -webkit-flex;
-      display: flex;
-      -webkit-justify-content: flex-start;
-      justify-content: flex-start;
-        li {
-          padding: 20px;
-        }
-        li a {
-          height: 50px;
-          display: inline-block;
-          color: #1e1934;
-          font-family: HelveticaNeueW01-67MdCn_692710,Arial,serif;
-          font-size: 15px;
-          text-decoration: none;
-          padding: 15px 0;
-          margin: 0;
-        }
-        li:nth-of-type(1)  {
-          padding-left: 20px;
-          margin-left: auto; 
-        }
-    }
-    .search-input form {
-      display: flex;
-    }        
-}
 
 .banner {
   height: 270px;
@@ -122,12 +99,7 @@ label {
   box-sizing: border-box;
 }
 
-.logo{
-  img {
-    height: 100px;
-    padding: 5px 0;
-  }
-}
+
 
 
 
