--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -165,6 +165,9 @@ body {
 	.headerbar-toggle {
 			display: none;
 	}
+	.active {		
+		background-color:white;
+	}
 }
 
 @media screen and (max-width: 1110px) {
