fix #69 Fix flash messages

--- a/app/assets/stylesheets/_common.scss
+++ b/app/assets/stylesheets/_common.scss
@@ -51,7 +51,7 @@ label {
   padding-bottom: 15px;
 }
 .mt-negative-50 {
-  margin-top: -50px;
+  // margin-top: -50px;
 }
 .bg-white {
   background-color: white;
@@ -71,7 +71,7 @@ label {
 .banner {
   height: 270px;
   background-color: #27c2b6;
-  margin-top: -20px;
+  // margin-top: -20px;
   .wrapper {
     height: 290px;
     padding: 103px 0;
