--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -1,7 +1,7 @@
 .main {
   background-color: #06921199;
   width: auto;
-  margin-top: -50px;
+  // margin-top: -50px;
   text-align: center;
   min-height: 30rem;
   position: relative;
@@ -219,7 +219,7 @@
 
 .loged-in-category {
   background-color: #dff0d8;
-  margin-top: -20px;
+  // margin-top: -20px;
   margin-bottom: 50px;
 }
 
