--- a/app/views/homes/_about-ibs.html.haml
+++ b/app/views/homes/_about-ibs.html.haml
@@ -9,10 +9,8 @@
         %p
         %ul
           %li
-            ・膨満（腹部の膨らんだ風船の感覚）
-          %li
-            ・膨満（腹囲の目に見える増加）
+            ・腹部の膨張感（腹部の膨らんだ風船のような感覚）          
           %li  
-            ・過剰なガス（おなら/風）
+            ・過剰なガス
           %li
-            ・排便の緊急性（うんち）      
+            ・排便の緊急性
