--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,17 +9,14 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
     = render 'layouts/header'
-    - if user_signed_in?
-      -# .container
-        -# %p.notice= notice
-        -# %p.alert= alert
+    - if user_signed_in?      
+      = render 'layouts/notifications'
       = yield
       = render 'layouts/footer'
       = debug(params) if Rails.env.development?
     - else
       .container
-        -# %p.notice= notice
-        -# %p.alert= alert
+      = render 'layouts/notifications'  
       = yield
       = render 'layouts/footer'
       = debug(params) if Rails.env.development?
