--- a/app/views/devise/registrations/detail.html.haml
+++ b/app/views/devise/registrations/detail.html.haml
@@ -1,6 +1,6 @@
 - provide(:title, @user.firstName+@user.lastName)
 .container.text-center
-  .user-profile
+  .user-profile.col-sm-10
     .profile-left  
       = gravatar_for @user
     .profile-right
