--- a/app/views/homes/_about-low-fodmap-diet.html.haml
+++ b/app/views/homes/_about-low-fodmap-diet.html.haml
@@ -4,7 +4,7 @@
       .rich-text.mb-30
         %h2 低FODMAPダイエット
         %p        
-          低FODMAPダイエットは上にある５つの糖質をできるだけ使用しない食事方法です。
+          低FODMAPダイエットは上にある4つの炭水化物をできるだけ使用しない食事方法です。
           日本ではそれほど認知されていない食事形態のため、低FODMAPレシピを探すのが大変です。
           Happy GutではIBSの方のためのコミュニティーであり、それぞれの低FODMAPレシピをシェアしていただき、美味しく健康にIBSの症状の緩和につながればと思います。
         
