--- a/app/views/users/show_follow.html.haml
+++ b/app/views/users/show_follow.html.haml
@@ -21,7 +21,7 @@
 -#           = render 'shared/users_list'
 
 .container.text-center
-  .user-profile
+  .user-profile.col-sm-10
     .profile-left  
       = gravatar_for @user
     .profile-right
