--- a/app/views/homes/_service.html.haml
+++ b/app/views/homes/_service.html.haml
@@ -10,7 +10,7 @@
             %i.fa.fa-bullhorn.fa-4x.icon{"aria-hidden" => "true"}
           %h4
             %strong レシピをシェア
-          %p.text-faded.mb-0 自分の低FODMAPレシピをみんなに写真やタグをつけて投稿できます。
+          %p.text-faded.mb-0 自分の低FODMAPレシピをみんなに写真をつけてカテゴリー別に投稿できます。
         .col-md-6.mb-5.mb-lg-0
           %span.service-icon.rounded-circle.mx-auto.mb-3
             %i.fa.fa-comments-o.fa-4x.icon{"aria-hidden" => "true"}
