--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -2,4 +2,4 @@
   %footer.padding-4
     .text-center
       %p
-        %small Copyright ©2020 fodmap, All Rights Reserved.
+        %small Copyright ©2020 happy-gut, All Rights Reserved.
