--- a/app/assets/stylesheets/likes.scss
+++ b/app/assets/stylesheets/likes.scss
@@ -4,8 +4,8 @@
 // like button
 .iine__button{
 	line-height: 42px;
-	color: #6d3701;
-	font-size: 14px;
+	color: black;
+	font-size: 17px;
 	display: inline-block;
 	padding: 0 18px;
 	border-radius: 100px;
