--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,14 +22,22 @@
 @import "bootstrap";
 @import "font-awesome";
 
+a:hover, a:focus {
+  color: #757c7b;
+  text-decoration: none;
+}
+a {
+	color: #757c7b;
+}
+
 // mobile
 
 @media (min-width: 320px) and (max-width: 480px) {
 	.headerbar {
-    font-size: 15px !important;    
+		font-size: 15px !important;  		  
 	}
 	.main-nav li {  
-    border-bottom: inset;
+    border-bottom: 2px inset #fff;
 	}
 	.user-profile .profile-right .profile-right-top {
     display: block !important;  
@@ -53,6 +61,9 @@
 	.recipe-img-upload {
     margin-left: 0 !important;
     margin-top: 20px !important;
+	}
+	.main-nav li {  
+    border-bottom: 2px inset #fff;
 	}
 	.recipe-pic-box {        
     display: block !important;
@@ -121,7 +132,9 @@ body {
 .headerbar {
 	font-size: 30px;
 	background-color: white;
-	// margin-bottom: 50px;	
+	ul {
+		margin-bottom: 0;
+	}
 }
 
 .logo {
@@ -138,8 +151,7 @@ body {
 }
 
 .main-nav li {
-	text-align: center;
-	margin: 15px auto;
+	text-align: center;	
 	margin-left: auto;
 	.nav-links {
 		a {
