--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -55,24 +55,30 @@
     - if user_signed_in?
       .menu-group
         .menu-left
-          %li
-            .nav-links.pb-15.pt-15
-              = link_to 'IBSとは', about_path
-          %li
-            .nav-links.pb-15.pt-15
-              = link_to 'レシピ検索', recipes_search_path
-          %li
-            .nav-links.pb-15.pt-15
-              = link_to 'レシピを作成', new_recipe_path
-          %li
-            .nav-links.pb-15.pt-15
-              = link_to 'お気に入り', recipes_liked_path
-          %li
-            .nav-links.pb-15.pt-15
-              = link_to " マイページ  ", "/user/#{current_user.id}" 
-          %li
-            .nav-links.pb-15.pt-15 
-              = link_to 'ログアウト', destroy_user_session_path, method: :delete 
+          = link_to about_path do
+            %li
+              .nav-links.pb-15.pt-15
+                = "IBSとは"
+          = link_to recipes_search_path do      
+            %li 
+              .nav-links.pb-15.pt-15
+                = 'レシピ検索'
+          = link_to new_recipe_path do   
+            %li 
+              .nav-links.pb-15.pt-15              
+                = 'レシピを作成'
+          = link_to recipes_liked_path do    
+            %li
+              .nav-links.pb-15.pt-15              
+                = 'お気に入り'
+          = link_to "/user/#{current_user.id}" do      
+            %li
+              .nav-links.pb-15.pt-15              
+                = "マイページ"
+          = link_to destroy_user_session_path, method: :delete do    
+            %li
+              .nav-links.pb-15.pt-15               
+                = 'ログアウト'
         %li.search-dis-none
           .menu-right
             .nav-links 
