--- a/app/views/devise/registrations/detail.html.haml
+++ b/app/views/devise/registrations/detail.html.haml
@@ -21,4 +21,5 @@
         = render 'shared/stats'      
   .wrapper.profile-recipes        
     = render 'recipes/recipe'
-    = paginate @recipes
+    .text-center
+      = paginate @recipes
