--- a/app/views/homes/_category.html.haml
+++ b/app/views/homes/_category.html.haml
@@ -1,7 +1,7 @@
 %section#services.content-section.text-center.mt-negative-50
   .container
     .content-section-heading
-      %h3.text-secondary.mb-0 Category
+      %h3.text-secondary.mb-0 Categories
       %h2.mb-5 低FODMAPレシピをカテゴリー別に探す
     .row    
       .category.col-md-5
